--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- Move the script tag to the end of the body for better loading performance -->
+
 </body>
 </html>
